[package]
name = "test-icu"
version = "0.1.0"
authors = ["Christian Swinehart <drafting@samizdat.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.skia-safe]
version = "0.42.0"
features = ["textlayout", "embed-icudtl"]
